# srtview

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  discovery.cpp  mpvlink.hpp  palettefix.cpp  searchbar.hpp  selftest.hpp  srt.cpp  srt.hpp  srtedit.hpp  srtview.cpp
.claude/: settings.json
.claude/skills/coderabbit/: SKILL.md  cr.sh
bests/: header_guards.h
cmake/: compiler.cmake
src/: CMakeLists.txt  concepts.hpp  crtp.hpp  cutil.h  decoder.cpp  decoder.hpp  decoderq.hpp  discovery.cpp  discovery.hpp  exporter.cpp  exporter.hpp  facts.cpp  facts.hpp  fundo.c  fundo.h  fundo_priv.h  grabber.cpp  grabber.hpp  list.c  list.h  list_priv.h  llm.c  llm.h  llm_priv.h  main.cpp  mainwin.cpp  mainwin.hpp  mpvclient.cpp  mpvclient.hpp  mpvlink.cpp  mpvlink.hpp  palettefix.cpp  palettefix.hpp  playback.cpp  playback.hpp  prefs.cpp  prefs.hpp  scale.hpp  search.cpp  search.hpp  (+14 more)
srtjump/: srtjump
tests/: CMakeLists.txt  fundo_test.c  llm_test.c  parse_test.cpp  topics_test.cpp
